--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -87,7 +87,7 @@
 <h2 id="-introduction" style="position:relative;"><a href="#-introduction" aria-label=" introduction permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>💁🏻 Introduction</h2>
 <ul>
 <li>안녕하십니까 3년차 프론트 엔드 개발자 오승현입니다.</li>
-<li>1년 동안 서버 개발을 했었지만 프론트에 더 흥미가 있어 프론트 개발자로 전향하였습니다.</li>
+<li>1년 동안 서버 개발을 했었지만 프론트에 흥미가 있어 프론트 개발자로 전향하였습니다.</li>
 <li>개발을 할 때 성능도 중요하지만 사용자의 UI/UX에 초점을 두어 개발을 하려고 노력합니다.</li>
 <li>새로운 것을 배우는 거에 부담감이 없고 많은 기술을 배우려고 노력합니다.</li>
 <li>DRY(Do not Repeat Yourself) 와 KISS(Keep It Simple Stupid) 항상 고민합니다.</li>
@@ -108,7 +108,7 @@
 <h3 id="backend" style="position:relative;"><a href="#backend" aria-label="backend permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Backend</h3>
 <ul>
 <li>Java</li>
-<li>Spring Boot, Spring MVC, Spring Batch, Spring Data JPA</li>
+<li>Spring Boot</li>
 <li>JPA</li>
 </ul>
 <h3 id="studing" style="position:relative;"><a href="#studing" aria-label="studing permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Studing…</h3>
