--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -130,7 +130,7 @@
 <h3 id="모바일-사원증-관리자-페이지-개발" style="position:relative;"><a href="#%EB%AA%A8%EB%B0%94%EC%9D%BC-%EC%82%AC%EC%9B%90%EC%A6%9D-%EA%B4%80%EB%A6%AC%EC%9E%90-%ED%8E%98%EC%9D%B4%EC%A7%80-%EA%B0%9C%EB%B0%9C" aria-label="모바일 사원증 관리자 페이지 개발 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>모바일 사원증 관리자 페이지 개발</h3>
 <p><em>2021.02 ~ 2021.03</em></p>
 <ul>
-<li>Element UI 프레임 워크를 사용하여 Vue 프론트 개발</li>
+<li>Element UI 프레임 워크를 사용하여 Vue 어드민 페이지 개발</li>
 <li>REST API 기반 통신</li>
 <li>JavaScript Canvas 라이브러리인 FabricJs를 사용하여 수정가능 한 사원증 템플릿 개발</li>
 </ul>
@@ -144,7 +144,7 @@
 <h3 id="사내-솔루션-소개-서비스-개발" style="position:relative;"><a href="#%EC%82%AC%EB%82%B4-%EC%86%94%EB%A3%A8%EC%85%98-%EC%86%8C%EA%B0%9C-%EC%84%9C%EB%B9%84%EC%8A%A4-%EA%B0%9C%EB%B0%9C" aria-label="사내 솔루션 소개 서비스 개발 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>사내 솔루션 소개 서비스 개발</h3>
 <p><em>2020.03 ~ 2020.5</em></p>
 <ul>
-<li>사내 솔루션 소개 페이지 화면 개발</li>
+<li>사내 솔루션 소개 페이지 개발</li>
 <li>Nuxt 프레임워크를 사용하여 서버사이드렌더링 및 SEO 구성</li>
 <li>TypeScript를 사용한 타입 정의</li>
 </ul>
@@ -162,7 +162,7 @@
 <h2 id="-인상-깊었던-프로젝트" style="position:relative;"><a href="#-%EC%9D%B8%EC%83%81-%EA%B9%8A%EC%97%88%EB%8D%98-%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8" aria-label=" 인상 깊었던 프로젝트 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>⛷ 인상 깊었던 프로젝트</h2>
 <h3 id="모바일-사원증-템플릿" style="position:relative;"><a href="#%EB%AA%A8%EB%B0%94%EC%9D%BC-%EC%82%AC%EC%9B%90%EC%A6%9D-%ED%85%9C%ED%94%8C%EB%A6%BF" aria-label="모바일 사원증 템플릿 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>모바일 사원증 템플릿</h3>
 <ul>
-<li>canvas.js 라이브러리 사용</li>
+<li>fabric.js 라이브러리 사용</li>
 <li>원하는 데이터와 이미지를 통해 사원증 템플릿 생성
 <br></li>
 </ul>
