--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -118,32 +118,32 @@
 <h3 id="did-모바일-사원증-앱" style="position:relative;"><a href="#did-%EB%AA%A8%EB%B0%94%EC%9D%BC-%EC%82%AC%EC%9B%90%EC%A6%9D-%EC%95%B1" aria-label="did 모바일 사원증 앱 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>DID 모바일 사원증 앱</h3>
 <p><em>2021.03 ~ 2021.05</em></p>
 <ul>
-<li>Vue.js 를 사용한 모바일 사원증 프론트엔드 개발</li>
-<li>NFC, BLE, FingerPrint, SecureStorage 등 네이티브 플러그인 사용</li>
-<li>다날 본인인증 라이브러리 사용</li>
-<li>DID(Decentralized Identity)를 이용한 신원증명 인증서 데이터 관리</li>
-<li>FCM 푸쉬 라이브러리 사용</li>
+<li>Vue.js와 Cordova를 사용한 모바일 사원증 프론트엔드 개발</li>
+<li>네이티브 플러그인 사용(NFC, BLE, FingerPrint, SecureStorage)</li>
+<li>다날 본인인증 적용</li>
+<li>FCM 푸쉬 적용</li>
 </ul>
 <h3 id="모바일-사원증-관리자-페이지-개발" style="position:relative;"><a href="#%EB%AA%A8%EB%B0%94%EC%9D%BC-%EC%82%AC%EC%9B%90%EC%A6%9D-%EA%B4%80%EB%A6%AC%EC%9E%90-%ED%8E%98%EC%9D%B4%EC%A7%80-%EA%B0%9C%EB%B0%9C" aria-label="모바일 사원증 관리자 페이지 개발 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>모바일 사원증 관리자 페이지 개발</h3>
 <p><em>2021.02 ~ 2021.03</em></p>
 <ul>
-<li>Element UI 프레임 워크를 사용하여 Vue 어드민 페이지 개발</li>
-<li>REST API 기반 통신</li>
-<li>JavaScript Canvas 라이브러리인 FabricJs를 사용하여 수정 가능 한 사원증 템플릿 개발</li>
+<li>Vue와 Element UI를 사용한 어드민 페이지 개발</li>
+<li>로그인 2-Factor Authentication 적용</li>
+<li>엑셀 업로드/ 다운로드 적용</li>
+<li>Fabric.js를 사용하여 수정 가능 한 사원증 템플릿 개발</li>
 </ul>
 <h3 id="did-모바일-방문증-앱과-관리자-페이지" style="position:relative;"><a href="#did-%EB%AA%A8%EB%B0%94%EC%9D%BC-%EB%B0%A9%EB%AC%B8%EC%A6%9D-%EC%95%B1%EA%B3%BC-%EA%B4%80%EB%A6%AC%EC%9E%90-%ED%8E%98%EC%9D%B4%EC%A7%80" aria-label="did 모바일 방문증 앱과 관리자 페이지 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>DID 모바일 방문증 앱과 관리자 페이지</h3>
 <p><em>2020.06 ~ 2020.11</em></p>
 <ul>
-<li>Vue.js와 화면 프레임워크 onsen ui 사용</li>
-<li>사내 방문증 시스템 연계</li>
-<li>네이티브 QR 코드 , NFC, 본인인증 사용</li>
+<li>Vonsen ui와 Vue를 사용한 방문증 앱/어드민 개발</li>
+<li>사내 방문증 레거시 시스템 연계</li>
+<li>네이티브 플러그인 사용(QR 코드 , NFC, FingerPrint)</li>
 </ul>
 <h3 id="사내-솔루션-소개-서비스-개발" style="position:relative;"><a href="#%EC%82%AC%EB%82%B4-%EC%86%94%EB%A3%A8%EC%85%98-%EC%86%8C%EA%B0%9C-%EC%84%9C%EB%B9%84%EC%8A%A4-%EA%B0%9C%EB%B0%9C" aria-label="사내 솔루션 소개 서비스 개발 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>사내 솔루션 소개 서비스 개발</h3>
 <p><em>2020.03 ~ 2020.05</em></p>
 <ul>
-<li>사내 솔루션 소개 페이지 개발</li>
 <li>Nuxt 프레임워크를 사용하여 서버사이드렌더링 및 SEO 구성</li>
 <li>TypeScript를 이용한 모델 정의</li>
+<li>Toast 에디터 적용</li>
 </ul>
 <h3 id="블록체인-솔루션-개발" style="position:relative;"><a href="#%EB%B8%94%EB%A1%9D%EC%B2%B4%EC%9D%B8-%EC%86%94%EB%A3%A8%EC%85%98-%EA%B0%9C%EB%B0%9C" aria-label="블록체인 솔루션 개발 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>블록체인 솔루션 개발</h3>
 <p><em>2019.12 ~ 2020.03</em></p>
