--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -88,7 +88,7 @@
 <li>1년 동안 서버 개발을 했었지만 프론트에 흥미가 있어 프론트 개발자로 전향하였습니다.</li>
 <li>개발할 때 성능도 중요하지만, 사용자의 UI/UX에 초점을 두어 개발을 하려고 노력합니다.</li>
 <li>새로운 것을 배우는 거에 부담감이 없고 많은 기술을 배우려고 노력합니다.</li>
-<li>DRY(Do not Repeat Yourself)와 KISS(Keep It Simple Stupid) 항상 고민합니다.</li>
+<li>DRY(Do not Repeat Yourself)와 KISS(Keep It Simple Stupid)를 항상 생각하며 개발합니다</li>
 <li>문제가 생길 시 ☕️를 마시며 느긋하게 생각하는 것을 좋아합니다.</li>
 </ul>
 <hr>
@@ -157,7 +157,7 @@
 </ul>
 <br>
 <br>
-<h2 id="-인상-깊었던-프로젝트" style="position:relative;"><a href="#-%EC%9D%B8%EC%83%81-%EA%B9%8A%EC%97%88%EB%8D%98-%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8" aria-label=" 인상 깊었던 프로젝트 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>⛷ 인상 깊었던 프로젝트</h2>
+<h2 id="-인상-깊었던-프로젝트" style="position:relative;"><a href="#-%EC%9D%B8%EC%83%81-%EA%B9%8A%EC%97%88%EB%8D%98-%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8" aria-label=" 인상 깊었던 프로젝트 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>🌠 인상 깊었던 프로젝트</h2>
 <h3 id="모바일-사원증-템플릿" style="position:relative;"><a href="#%EB%AA%A8%EB%B0%94%EC%9D%BC-%EC%82%AC%EC%9B%90%EC%A6%9D-%ED%85%9C%ED%94%8C%EB%A6%BF" aria-label="모바일 사원증 템플릿 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>모바일 사원증 템플릿</h3>
 <ul>
 <li>fabric.js 라이브러리 사용</li>
