--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -142,7 +142,7 @@
 <p><em>2020.03 ~ 2020.05</em></p>
 <ul>
 <li>Nuxt 프레임워크를 사용</li>
-<li>페이지별 SEO 구성</li>
+<li>페이지 별 SEO 구성</li>
 <li>TypeScript를 이용한 모델 정의</li>
 <li>Toast 에디터 적용</li>
 </ul>
@@ -160,8 +160,9 @@
 <h2 id="-인상-깊었던-프로젝트" style="position:relative;"><a href="#-%EC%9D%B8%EC%83%81-%EA%B9%8A%EC%97%88%EB%8D%98-%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8" aria-label=" 인상 깊었던 프로젝트 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>🌠 인상 깊었던 프로젝트</h2>
 <h3 id="모바일-사원증-템플릿" style="position:relative;"><a href="#%EB%AA%A8%EB%B0%94%EC%9D%BC-%EC%82%AC%EC%9B%90%EC%A6%9D-%ED%85%9C%ED%94%8C%EB%A6%BF" aria-label="모바일 사원증 템플릿 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>모바일 사원증 템플릿</h3>
 <ul>
+<li>확장성 있는 사원증 템플릿</li>
 <li>fabric.js 라이브러리 사용</li>
-<li>원하는 데이터와 이미지를 통해 사원증 템플릿 생성
+<li>원하는 데이터와 이미지를 통해 사용자가 만들고 싶은 사원증 템플릿 생성
 <br></li>
 </ul>
 <figure class="float-left" style="width: 100%;max-width: 36rem; padding: 0 0 10px 0; margin:0; ">
