--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -87,7 +87,7 @@
 <li>안녕하십니까? 3년차 프론트 엔드 개발자 오승현입니다.</li>
 <li>1년 동안 서버 개발을 했었지만 프론트에 흥미가 있어 프론트 개발자로 전향하였습니다.</li>
 <li>개발할 때 성능도 중요하지만, 사용자의 UI/UX에 초점을 두어 개발을 하려고 노력합니다.</li>
-<li>새로운 것을 배우는 거에 부담감이 없고 많은 기술을 배우려고 노력합니다.</li>
+<li>새로운 기술에 대해 부담감이 없고 많은 기술을 배우려고 노력합니다.</li>
 <li>DRY(Do not Repeat Yourself)와 KISS(Keep It Simple Stupid)를 항상 생각하며 개발합니다</li>
 <li>문제가 생길 시 ☕️를 마시며 느긋하게 생각하는 것을 좋아합니다.</li>
 </ul>
