--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -134,7 +134,7 @@
 <h3 id="did-모바일-방문증-앱과-관리자-페이지" style="position:relative;"><a href="#did-%EB%AA%A8%EB%B0%94%EC%9D%BC-%EB%B0%A9%EB%AC%B8%EC%A6%9D-%EC%95%B1%EA%B3%BC-%EA%B4%80%EB%A6%AC%EC%9E%90-%ED%8E%98%EC%9D%B4%EC%A7%80" aria-label="did 모바일 방문증 앱과 관리자 페이지 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>DID 모바일 방문증 앱과 관리자 페이지</h3>
 <p><em>2020.06 ~ 2020.11</em></p>
 <ul>
-<li>Vonsen ui와 Vue를 사용한 방문증 앱/어드민 개발</li>
+<li>Vue와 Onsen ui를 사용한 방문증 앱/어드민 개발</li>
 <li>사내 방문증 레거시 시스템 연계</li>
 <li>네이티브 플러그인 사용(QR 코드 , NFC, FingerPrint)</li>
 </ul>
